ドキュメント更新: READMEと要件定義書に新機能を追加
- 同じ日付の日報作成防止機能を追加
- 社員側の日報削除ボタン削除について追記
- 検索・フィルター機能の説明を追加
- API設計にエラーレスポンスを追加
- 制限事項と変更履歴を更新

--- a/要件定義書.md
+++ b/要件定義書.md
@@ -63,15 +63,26 @@
   - すべての項目が必須
   - 活動セクションは最低1つ必要
   - 自動的にログインユーザーのIDが紐付けられる
+  - 同じユーザーが同じ日付の日報を複数作成することはできない（1日1日報）
 
 #### 2.2.2 日報一覧表示
 - ログインユーザーの日報のみ表示
-- 日付の降順で表示
+- 日付の降順で表示（デフォルト）
 - 各日報に以下を表示:
   - 日付
   - 活動数
   - 合計稼働時間
   - 詳細リンク
+
+- **検索・フィルター機能**
+  - キーワード検索: 本日の目標、活動内容、課題、改善点などを全文検索
+  - プロジェクト/カテゴリーフィルター: 使用しているプロジェクトを自動抽出し、複数選択可能
+  - 並び替え機能:
+    - 日付（新しい順・古い順）
+    - 更新日時（新しい順・古い順）
+    - 稼働時間（多い順・少ない順）
+  - フィルター結果の件数表示
+  - リセットボタンで全フィルターをクリア
 
 #### 2.2.3 日報詳細表示
 - 自分の日報のみ閲覧可能
@@ -86,10 +97,10 @@
 - 編集フォームで全項目を更新
 - キャンセルボタンで閲覧モードに戻る
 
-#### 2.2.5 日報削除
-- 自分の日報のみ削除可能
-- 削除時に確認ダイアログ表示
-- 関連する活動も自動削除（カスケード削除）
+#### 2.2.5 日報の削除について
+- 社員側では日報全体の削除は不可（データの保全のため）
+- 活動セクションの削除は編集モードで可能
+- 日報の編集・更新は可能
 
 ### 2.3 管理画面機能
 
@@ -486,6 +497,14 @@
 
 **レスポンス**: 作成された日報オブジェクト
 
+**エラー**:
+- `409 Conflict`: 同じ日付の日報が既に存在する場合
+  ```json
+  {
+    "error": "この日付の日報は既に作成されています"
+  }
+  ```
+
 #### GET /api/reports/[id]
 日報詳細取得（自分の日報のみ）
 
@@ -498,15 +517,13 @@
 
 **レスポンス**: 更新された日報オブジェクト
 
-#### DELETE /api/reports/[id]
-日報削除（自分の日報のみ）
-
-**レスポンス**:
-```json
-{
-  "message": "削除成功"
-}
-```
+**エラー**:
+- `409 Conflict`: 日付を変更する場合、変更先の日付で既に日報が存在する場合
+  ```json
+  {
+    "error": "この日付の日報は既に作成されています"
+  }
+  ```
 
 ### 5.3 管理者API
 
@@ -733,14 +750,16 @@
 
 ### 10.1 現状の制限事項
 - モバイルアプリは未実装（Webのみ）
-- 日報の検索機能なし
 - 日報のPDF出力機能なし
 - 通知機能なし
 - ファイル添付機能なし
+- 社員側では日報全体の削除が不可（データ保全のため）
 
 ### 10.2 今後の拡張案
 - モバイルアプリ（React Native）の実装
-- 日報の全文検索機能
+- 管理者側の検索・フィルター機能強化（キーワード検索、プロジェクトフィルター）
+- 期間のクイック選択機能（今週、今月など）
+- 稼働時間フィルター機能
 - PDF/Excel出力機能
 - メール通知機能（日報未提出時など）
 - グラフ・統計機能の強化
@@ -755,3 +774,4 @@
 | 1.0       | 2025-12-02 | 初版作成（基本機能）                |
 | 2.0       | 2025-12-02 | 管理機能追加（権限管理、操作ログ） |
 | 2.1       | 2025-12-04 | 日報機能の改善（本日の目標、時刻入力、編集機能） |
+| 2.2       | 2025-12-04 | 日報機能の改善（日付重複防止、削除ボタン削除、検索・フィルター機能追加） |
